<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">SMS To Email</string>

  <!-- activity: recipient list -->
  <string name="label_enable">Enable Service</string>

  <!-- menu: common -->
  <string name="menu_add">ADD</string>

  <!-- menu: recipient list -->
  <string name="menu_smtp_server">SMTP Server</string>

  <!-- dialog: common -->
  <string name="label_button_cancel">CANCEL</string>
  <string name="label_button_delete">DELETE</string>
  <string name="label_button_save">SAVE</string>

  <!-- dialog: recipient -->
  <string name="label_email_recipient">Email Recipient:</string>
  <string name="label_email_subject">Email Subject:</string>
  <string name="label_sms_sender">SMS Sender must end with:</string>

  <string name="default_email_subject">New text message from {{sender}}</string>

  <!-- dialog: smtp server -->
  <string name="label_smtp_hostname">Host:</string>
  <string name="label_smtp_port">Port:</string>
  <string name="label_smtp_encryption">Use Encryption:</string>
  <string name="label_smtp_authentication">Require Authentication</string>
  <string name="label_smtp_username">Username:</string>
  <string name="label_smtp_password">Password:</string>
  <string name="label_smtp_from">From:</string>
  <string name="label_smtp_subject">Subject:</string>

  <string name="label_test_email_heading">Test Email</string>
  <string name="label_test_email_recipient">Recipient:</string>
  <string translatable="false" name="hint_test_email_recipient">user@example.com</string>
  <string name="label_button_test_email_send">Send</string>
  <string name="content_test_email_subject">@string/app_name</string>
  <string name="content_test_email_message">SMTP Server settings are correct!</string>
  <string name="notification_test_email_sent">Test email sent</string>

  <string name="smtp_encryption_option_none">no</string>
  <string translatable="false" name="smtp_encryption_option_ssl">SSL</string>
  <string translatable="false" name="smtp_encryption_option_tls">TLS</string>

  <string-array name="smtp_encryption_options_array">
    <item>@string/smtp_encryption_option_none</item>
    <item>@string/smtp_encryption_option_ssl</item>
    <item>@string/smtp_encryption_option_tls</item>
  </string-array>

  <!-- errors -->
  <string name="error_missing_required_value">Error: Missing Required Value</string>
  <string name="error_add_listitem">Error: Could not add new item to list</string>
</resources>
