<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <LinearLayout
    android:orientation="vertical"
    android:layout_gravity="left"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="20dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_email_recipient"
      style="@style/dialog_textview" />

    <EditText
      android:id="@+id/input_email_recipient"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress|textNoSuggestions" />

    <TextView
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_email_subject"
      style="@style/dialog_textview" />

    <EditText
      android:id="@+id/input_email_subject"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/default_email_subject"
      android:inputType="text|textMultiLine|textNoSuggestions" />

    <TextView
      android:layout_marginTop="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_sms_sender"
      style="@style/dialog_textview" />

    <EditText
      android:id="@+id/input_sms_sender"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="number"
      android:maxLength="15" />

    <LinearLayout
      android:layout_marginTop="10dp"
      android:orientation="horizontal"
      android:layout_gravity="center"
      android:gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/label_button_delete" />

      <Button
        android:layout_marginLeft="20dp"
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/label_button_save" />

    </LinearLayout>

  </LinearLayout>
</ScrollView>
